feature: borrado logico en productos